test-suite/typecheck/pass/literal_types.first
function f() -> Unit {
  let a: Int = 42;
  let b: Float = 3.14;
  let c: String = "x";
  let d: Bool = true;
  return;
}
