test-suite/typecheck/fail/assign_immutable.first
interaction main() -> Unit {
  let x: Int = 10;
  x = 20;
  return;
}
